# Trading_View_PyChart

./: README.md  pyproject.toml
for_testing/: beck-end.py  font-end.html
trading-view-pychart/: main.py  template.html
